<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<include
    android:id="@+id/ac_login"
    layout="@layout/activity_title"
    />
<EditText
    android:layout_below="@+id/ac_login"
    android:id="@+id/input_name"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="@dimen/text_20"
    android:layout_marginRight="@dimen/text_20"
    android:background="@drawable/tv_cen"
    android:hint="@string/login_name"
    android:paddingLeft="5dp"
    />
    <EditText
        android:layout_below="@+id/input_name"
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:background="@drawable/tv_cen"
        android:hint="@string/login_phone"
        android:layout_marginTop="@dimen/text_10"
        android:paddingLeft="5dp"
        />

    <EditText
        android:layout_below="@+id/input_phone"
        android:id="@+id/input_psd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:background="@drawable/tv_cen"
        android:layout_marginTop="@dimen/text_10"
        android:hint="@string/login_psd"
        android:paddingLeft="5dp"
        />
    <EditText
        android:layout_below="@+id/input_psd"
        android:id="@+id/input_job_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:background="@drawable/tv_cen"
        android:layout_marginTop="@dimen/text_10"
        android:hint="@string/login_work"
        android:paddingLeft="5dp"
        />
    <EditText
        android:layout_below="@+id/input_job_name"
        android:id="@+id/input_work_place"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:background="@drawable/tv_cen"
        android:layout_marginTop="@dimen/text_10"
        android:hint="@string/login_work_place"
        android:paddingLeft="5dp"
        />


    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@mipmap/btn_login"
        android:layout_below="@+id/input_work_place"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:textColor="@color/white"
        android:text="登\t\t录"
       />
    <TextView
        android:id="@+id/save_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:layout_below="@+id/login_submit"
        android:layout_marginTop="@dimen/text_20"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/text_20"
        android:drawableLeft="@mipmap/select"
        android:drawablePadding="5dp"
        />
</RelativeLayout>
