<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEEFF"
    >
<include
    android:id="@+id/measure_title"
    layout="@layout/activity_title"
    />
<TextView
    android:id="@+id/demo_content"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:gravity="center|left"
    android:paddingLeft="@dimen/text_20"
    android:layout_below="@+id/measure_title"
    android:text="@string/measure_disconnect"
    />
    <Switch
        android:layout_below="@+id/measure_title"
        android:layout_marginTop="15dp"
        android:id="@+id/switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:switchMinWidth="20dp"
        android:textOn="  "
        android:textOff="  "
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/text_20"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track" />
    <View
        android:id="@+id/measure_divider"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/switch_btn"
        android:background="@color/province_line_border"
        />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/measure_divider"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/text_20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:paddingLeft="@dimen/text_20"
            android:layout_below="@+id/measure_title"
            android:text="@string/measure_select"
            />
        <TextView
            android:id="@+id/select_user"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="@dimen/text_20"
            android:layout_below="@+id/measure_title"
            android:drawablePadding="@dimen/text_20"
            android:drawableRight="@mipmap/icon_jiantou"
            />
    </LinearLayout>
    <View
        android:id="@+id/measure_divider1"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_below="@+id/linear"
        android:background="@color/province_line_border"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/measure_divider1"
        android:layout_above="@+id/linear_buttons"
        >
        <TextView
            android:id="@+id/text_data"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="显示接收到的数据"
            />
    </ScrollView>
    <LinearLayout
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/province_line_border"
        >
        <Button
            android:id="@+id/measure_begin"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_content"
            android:text="@string/measure_begin"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/hintColor_repair"
            />
        <Button
            android:id="@+id/measure_stop"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_content"
            android:text="@string/measure_stop"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/hintColor_repair"

            />

        <Button
            android:id="@+id/measure_save"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/measure_save"
            android:background="@drawable/btn_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/hintColor_repair"

            />

    </LinearLayout>
</RelativeLayout>
